// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BpkTableBody should render correctly 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr />
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`BpkTableBody should render correctly with arbitrary props 1`] = `
<DocumentFragment>
  <table>
    <tbody
      data-foo="bar"
      id="my-custom-id"
    >
      <tr />
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`BpkTableBody should render correctly with custom class 1`] = `
<DocumentFragment>
  <table>
    <tbody
      class="my-custom-class"
    >
      <tr />
    </tbody>
  </table>
</DocumentFragment>
`;
